cross-plat build; readme