@@ -1,15 +1,9 @@
 plugins {
-    id "com.google.osdetector" version "1.4.0"
+  id 'org.openjfx.javafxplugin' version '0.0.7'
 }
 
 apply plugin: 'java'
 apply plugin: 'application'
-
-ext.platform = osdetector.os == 'osx' ? 'mac' : osdetector.os == 'windows' ? 'win' : osdetector.os
-
-group 'nu.mine.mosher.gedcom'
-version '1.0.0-SNAPSHOT'
-mainClassName = 'nu.mine.mosher.gedcom.xy.GenXyEditor'
 
 repositories {
     mavenCentral()
@@ -21,16 +15,23 @@ dependencies {
     implementation group: 'org.slf4j', name: 'jul-to-slf4j', version: 'latest.integration'
     implementation group: 'org.slf4j', name: 'slf4j-api', version: 'latest.integration'
     implementation group: 'org.slf4j', name: 'slf4j-simple', version: 'latest.integration'
-    implementation group: 'org.openjfx', name: 'javafx-graphics', version: '11.0.1', classifier: "$platform"
-    implementation group: 'org.openjfx', name: 'javafx-controls', version: '11.0.1', classifier: "$platform"
-    implementation group: 'org.openjfx', name: 'javafx-base', version: '11.0.1', classifier: "$platform"
 }
 
-run {
-    doFirst {
-        jvmArgs = [
-                '--module-path', classpath.asPath,
-                '--add-modules', 'javafx.controls'
-        ]
-    }
+javafx {
+    version = "11.0.2"
+    modules = [ 'javafx.controls' ]
 }
+
+ext.plat = org.gradle.internal.os.OperatingSystem.current().name.toLowerCase()
+
+distTar {
+    classifier plat
+}
+
+distZip {
+    classifier plat
+}
+
+group 'nu.mine.mosher.gedcom'
+mainClassName = 'nu.mine.mosher.gedcom.xy.GenXyEditor'
+version '1.0.0'
